--- a/src/package.json
+++ b/src/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -44,7 +45,7 @@
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0",
+    "next": "^14.2.5",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -56,7 +57,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18.3.4",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
