--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.7.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.1",
     "openai": "^4.0.0"
