--- a/package.json
+++ b/package.json
@@ -44,14 +44,13 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "^12.5.0",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
     "next": "15.0.0",
     "openai": "^4.104.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
@@ -63,6 +62,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "firebase-frameworks": "^0.11.8",
+    "firebase-tools": "^14.24.1",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
