🧠 GEMINI PROMPT — “Fix M2DG AI Trainer Dialog + Stability Update”
Task

--- a/firebase.json
+++ b/firebase.json
@@ -23,6 +23,16 @@
   ],
   "hosting": {
     "public": ".next",
+    "headers": [
+        {
+          "source": "/api/**",
+          "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "*" },
+            { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+            { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+          ]
+        }
+      ],
     "ignore": [
       "firebase.json",
       "**/.*",
