🧠 GEMINI PROMPT — “Fix External Chat Connectivity (Firestore + Function

--- a/firebase.json
+++ b/firebase.json
@@ -22,26 +22,23 @@
     }
   ],
   "hosting": {
-    "public": ".next",
-    "headers": [
-        {
-          "source": "/api/**",
-          "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "*" },
-            { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-            { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
-          ]
-        }
-      ],
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
+    "frameworksBackend": {
+      "region": "us-central1"
+    },
+    "headers": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/api/**",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+        ]
       }
     ]
   }
